--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,34 @@
-.App {
-  text-align: center;
+html{
+    scroll-snap-type: y mandatory;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.app{
+    background-color: black;
+    height: 100vh;
+    display: grid;
+    place-items: center;
+    /* overflow: hidden; */
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.app__videos{
+    position: relative;
+    height: 100%;
+    overflow: scroll;
+    width: 100%;
+    /* border-right: 1px solid black; */
+    max-width: 500px;
+    max-height: 100vh;
+    /* border-radius: 20px; */
+    scroll-snap-type: y mandatory;
+} 
+
+/* Hide the scrollbar for chrome , safari,Opera */
+.app__videos::-webkit-scrollbar{
+    display:none ;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* HIde the scrollbar for IE,Edge,Firefox */
+.app__videos{
+    -ms-overflow-style: none; /*IE and Edge*/
+    scrollbar-width: none; /*Firefox */
 }
